2008-03-31  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

        Reviewed by Maciej.

        Add support for FunctionCallValueNode.

        * kjs/nodes.cpp:
        (KJS::FunctionCallValueNode::emitCode):
        * kjs/nodes.h:

2008-03-31  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Oliver.
        
        1) Implemented array literals
        
        2) Renamed op_object_get and op_object_put to op_get_prop_id and
        op_put_prop_id in preparation for new variants.

        * VM/CodeBlock.cpp:
        (KJS::CodeBlock::dump):
        * VM/CodeGenerator.cpp:
        (KJS::CodeGenerator::emitNewArray):
        (KJS::CodeGenerator::emitGetPropId):
        (KJS::CodeGenerator::emitPutPropId):
        (KJS::CodeGenerator::emitPutPropIndex):
        * VM/CodeGenerator.h:
        (KJS::CodeGenerator::CodeGenerator):
        (KJS::CodeGenerator::propertyNames):
        * VM/Machine.cpp:
        (KJS::Machine::privateExecute):
        * VM/Opcode.h:
        * kjs/nodes.cpp:
        (KJS::ArrayNode::emitCode):
        (KJS::PropertyListNode::emitCode):
        (KJS::DotAccessorNode::emitCode):
        (KJS::PostIncResolveNode::emitCode):
        (KJS::PreIncResolveNode::emitCode):
        (KJS::AssignResolveNode::emitCode):
        (KJS::AssignDotNode::emitCode):
        * kjs/nodes.h:

2008-03-30  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Oliver Hunt.
        
        Implemented native function calls. (Re-entering from native code back
        to JS doesn't work yet, though.)

        0.2% speedup overall, due to some inlining tweaks. 3.6% regression on
        function-empty.js, since we're making a new virtual call and taking a
        new branch inside every op_call.
        
        I adjusted the JavaScriptCore calling convention to minimize overhead,
        like so:
        
        The machine calls a single virtual function, "getCallData", to get all
        the data it needs for a function call. Native code still uses the old