@@ -448,14 +448,14 @@ namespace KJS {
     protected:
         ALWAYS_INLINE JSValue* inlineEvaluate(ExecState*);
         Identifier m_ident;
-        size_t m_index; // Used by LocalVarAccessNode and ScopedVarAccessNode.
+        int m_index; // Used by LocalVarAccessNode and ScopedVarAccessNode.
         size_t m_scopeDepth; // Used by ScopedVarAccessNode
     };
 
     class LocalVarAccessNode : public ResolveNode {
     public:
         // Overwrites a ResolveNode in place.
-        LocalVarAccessNode(size_t i) KJS_FAST_CALL
+        LocalVarAccessNode(int i) KJS_FAST_CALL
             : ResolveNode(PlacementNewAdopt)
         {
             ASSERT(i != missingSymbolMarker());
@@ -475,7 +475,7 @@ namespace KJS {
     class ScopedVarAccessNode : public ResolveNode {
     public:
         // Overwrites a ResolveNode in place.
-        ScopedVarAccessNode(size_t i, size_t scopeDepth) KJS_FAST_CALL
+        ScopedVarAccessNode(int i, size_t scopeDepth) KJS_FAST_CALL
         : ResolveNode(PlacementNewAdopt)
         {
             ASSERT(i != missingSymbolMarker());
@@ -857,7 +857,7 @@ namespace KJS {
     
     class LocalVarFunctionCallNode : public FunctionCallResolveNode {
     public:
-        LocalVarFunctionCallNode(size_t i) KJS_FAST_CALL
+        LocalVarFunctionCallNode(int i) KJS_FAST_CALL
             : FunctionCallResolveNode(PlacementNewAdopt)
         {
             ASSERT(i != missingSymbolMarker());
@@ -876,7 +876,7 @@ namespace KJS {
     
     class ScopedVarFunctionCallNode : public FunctionCallResolveNode {
     public:
-        ScopedVarFunctionCallNode(size_t i, size_t depth) KJS_FAST_CALL
+        ScopedVarFunctionCallNode(int i, size_t depth) KJS_FAST_CALL
             : FunctionCallResolveNode(PlacementNewAdopt)
         {
             ASSERT(i != missingSymbolMarker());
@@ -999,7 +999,7 @@ namespace KJS {
 
     class PostIncLocalVarNode : public PostIncResolveNode {
     public:
-        PostIncLocalVarNode(size_t i) KJS_FAST_CALL
+        PostIncLocalVarNode(int i) KJS_FAST_CALL
             : PostIncResolveNode(PlacementNewAdopt)
         {
             ASSERT(i != missingSymbolMarker());
@@ -1012,7 +1012,7 @@ namespace KJS {
 
     class PostIncConstNode : public PostIncResolveNode {
     public:
-        PostIncConstNode(size_t i) KJS_FAST_CALL
+        PostIncConstNode(int i) KJS_FAST_CALL
             : PostIncResolveNode(PlacementNewAdopt)
         {
             ASSERT(i != missingSymbolMarker());
@@ -1043,7 +1043,7 @@ namespace KJS {
 
     class PostDecLocalVarNode : public PostDecResolveNode {
     public:
-        PostDecLocalVarNode(size_t i) KJS_FAST_CALL
+        PostDecLocalVarNode(int i) KJS_FAST_CALL
             : PostDecResolveNode(PlacementNewAdopt)
         {
             ASSERT(i != missingSymbolMarker());
@@ -1063,7 +1063,7 @@ namespace KJS {
 
     class PostDecConstNode : public PostDecResolveNode {
     public:
-        PostDecConstNode(size_t i) KJS_FAST_CALL
+        PostDecConstNode(int i) KJS_FAST_CALL
             : PostDecResolveNode(PlacementNewAdopt)
         {
             ASSERT(i != missingSymbolMarker());
@@ -1298,7 +1298,7 @@ namespace KJS {
 
     class LocalVarTypeOfNode : public TypeOfResolveNode {
     public:
-        LocalVarTypeOfNode(size_t i) KJS_FAST_CALL
+        LocalVarTypeOfNode(int i) KJS_FAST_CALL
             : TypeOfResolveNode(PlacementNewAdopt)
         {
             m_expectedReturnType = StringType;
@@ -1348,7 +1348,7 @@ namespace KJS {
 
     class PreIncLocalVarNode : public PreIncResolveNode {
     public:
-        PreIncLocalVarNode(size_t i) KJS_FAST_CALL
+        PreIncLocalVarNode(int i) KJS_FAST_CALL
             : PreIncResolveNode(PlacementNewAdopt)
         {
             ASSERT(i != missingSymbolMarker());
@@ -1360,7 +1360,7 @@ namespace KJS {
 
     class PreIncConstNode : public PreIncResolveNode {
     public:
-        PreIncConstNode(size_t i) KJS_FAST_CALL
+        PreIncConstNode(int i) KJS_FAST_CALL
             : PreIncResolveNode(PlacementNewAdopt)
         {
             ASSERT(i != missingSymbolMarker());
@@ -1391,7 +1391,7 @@ namespace KJS {
 
     class PreDecLocalVarNode : public PreDecResolveNode {
     public:
-        PreDecLocalVarNode(size_t i) KJS_FAST_CALL
+        PreDecLocalVarNode(int i) KJS_FAST_CALL
             : PreDecResolveNode(PlacementNewAdopt)
         {
             ASSERT(i != missingSymbolMarker());
@@ -1403,7 +1403,7 @@ namespace KJS {
 
     class PreDecConstNode : public PreDecResolveNode {
     public:
-        PreDecConstNode(size_t i) KJS_FAST_CALL
+        PreDecConstNode(int i) KJS_FAST_CALL
             : PreDecResolveNode(PlacementNewAdopt)
         {
             ASSERT(i != missingSymbolMarker());
@@ -2279,7 +2279,7 @@ namespace KJS {
 
     class ReadModifyLocalVarNode : public ReadModifyResolveNode {
     public:
-        ReadModifyLocalVarNode(size_t i) KJS_FAST_CALL
+        ReadModifyLocalVarNode(int i) KJS_FAST_CALL
             : ReadModifyResolveNode(PlacementNewAdopt)
         {
             ASSERT(i != missingSymbolMarker());
@@ -2291,7 +2291,7 @@ namespace KJS {
 
     class ReadModifyConstNode : public ReadModifyResolveNode {
     public:
-        ReadModifyConstNode(size_t i) KJS_FAST_CALL
+        ReadModifyConstNode(int i) KJS_FAST_CALL
             : ReadModifyResolveNode(PlacementNewAdopt)
         {
             ASSERT(i != missingSymbolMarker());
@@ -2331,7 +2331,7 @@ namespace KJS {
 
     class AssignLocalVarNode : public AssignResolveNode {
     public:
-        AssignLocalVarNode(size_t i) KJS_FAST_CALL
+        AssignLocalVarNode(int i) KJS_FAST_CALL
             : AssignResolveNode(PlacementNewAdopt)
         {
             ASSERT(i != missingSymbolMarker());
