@@ -1,3 +1,11 @@
+2008-03-31  Geoffrey Garen  <ggaren@apple.com>
+
+        Reviewed by Sam Weinig.
+        
+        Changed the SymbolTable API to use int instead of size_t. It has been
+        using int internally for a while now (since squirrelfish symbols can
+        have negative indices).
+
 2008-03-31  Cameron Zwarich  <cwzwarich@uwaterloo.ca>
 
         Reviewed by Maciej.
